--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="%PUBLIC_URL%/gosocialLogo.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=0, maximum-scale=1">
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>GoSocial Landing Page</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
