Updated Style For Responsiveness

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="GoSocial Landing Page Clone built by Karishma Garg."
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>GoSocial Landing Page</title>
